--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "audio-buffer": "^4.0.4",
+    "audio-loader": "^1.0.3",
+    "audio-play": "^2.2.1",
     "express": "^4.16.4",
     "play-sound": "^1.1.2"
   }
